@@ -1,3 +1,11 @@
+2004-10-14  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/std/std_memory.h (__get_temporary_buffer): Don't use
+	INT_MAX, prefer numeric_limits<ptrdiff_t>::max(), ok on 64-bit
+	platforms too.
+	* testsuite/20_util/auto_ptr/assign_neg.cc: Adjust dg-error
+	line numbers.
+
 2004-10-11  Joachim Kuebart  <kuebart@mathematik.uni-ulm.de>
 	    Paolo Carlini  <pcarlini@suse.de>
 
